# petra

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL_QUICKREF.md  QUICKSTART.md  README.md  build.rs  config.yaml  contraints.md  docker-compose.production.yml  docker-compose.quickstart.yml  docker-compose.yml  full_project_code.txt  petra-dev.sh  push test.txt  quick-start-fixed.sh  quick-start.sh  start-petra.sh
.cargo/: config.toml
.github/workflows/: ci.yml  features.yml  release.yml  smoke-test.yml
backup_20250702_011810/configs/: docker-example.yaml  example-with-history.yaml  example.yaml  pressure-test.yaml  s7-example.yaml  storage-test.yaml
backup_20250702_011810/scripts/: check-concurrency.sh  check-performance.sh  enhance-docs.rs  install-deps.sh  pre-commit.sh  pre-release-check.sh  reorganize-configs.sh  test.sh
backup_20250703_111145/configs/: README.md  alarm-example.yaml  direct-run-fixed.yaml
backup_20250703_111145/configs/schemas/: petra-config-v1.json
backup_20250703_111145/scripts/: build-production.sh  check-memory.sh  fix-unwraps.sh  generate-mqtt-server-cert.sh  generate-release-notes.sh  init-production.sh  petra-dev.sh  release.sh  security-review.sh  test-api-contracts.sh  update-version.sh
backup_benchmarks/: engine.rs
benches/: engine.rs  engine_performance.rs  features.rs  performance_improvements.rs  simple_working.rs
ca-service/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
ca-service/src/: ca.rs  db.rs  email.rs  error.rs  main.rs  stripe_handler.rs
config/: .mqtt.yaml.swp  mqtt.yaml
config/rack/: slot1.yaml  slot2.yaml  slot3.yaml  slot4.yaml
configs/: alarm-example.yaml  build-fixed.sh  example-mqtt.yaml  example-with-history.yaml  minimal.yaml  mosquitto.conf  pressure-test.yaml  production.yaml  run-petra-direct.sh  storage-test.yaml  twilio-example.yaml  water-plant-control.yaml
configs/examples/advanced/: production-clickhouse.yaml
data/storage_test/: petra_test_001.parquet  petra_test_002.parquet  petra_test_003.parquet  petra_test_004.parquet  petra_test_005.parquet  petra_test_006.parquet  petra_test_007.parquet
dev-tools/: setup-dev.sh
docker/base/: Dockerfile  Dockerfile.dashboard
docker/compose/: docker-compose.dev.yml  docker-compose.yml
docs/: ISA18-Alarm-Compliance.md  benchmark-guide.md  features.md  integration-guide.md  minimum-config.md  performance-guide.md  production-guide.md
docs/api/: signal-bus.md
docs/architecture/: system-overview.md
docs/tutorials/: getting-started.md
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
mosquitto/config/: mosquitto.conf
node-red/: docker-compose.yml  flows.json  mosquitto.conf
petra-designer/: README.md  eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.ts
petra-designer/src/: App.tsx  main.tsx  vite-env.d.ts
petra-designer/src/__tests__/: integration.test.tsx
petra-designer/src/components/: ConnectionStatus.tsx  ConnectionStatusSidebar.tsx  ErrorBoundary.tsx  ISA101LogicDesigner.tsx  OptimizedReactFlow.tsx  PropertiesPanel.tsx  Sidebar.tsx  Toolbar.tsx  YamlPreview.tsx
petra-designer/src/contexts/: PetraContext.tsx
petra-designer/src/edges/: index.ts
petra-designer/src/hooks/: useAlarms.ts  useAuth.ts  useBlockStatus.ts  useComponentTemplates.ts  useConfiguration.ts  useDataExport.ts  useHMIKeyboardShortcuts.ts  useKeyboardShortcuts.ts  useOfflineQueue.ts  usePetraConnection.ts  useProtocols.ts  useSignalHistory.ts  useSystemMetrics.ts
petra-designer/src/nodes/: AlarmNode.tsx  BlockNode.tsx  ContactNode.tsx  EmailNode.tsx  ModbusNode.tsx  MqttNode.tsx  OptimizedBlockNode.tsx  S7Node.tsx  SignalNode.tsx  TwilioNode.tsx  index.ts
petra-designer/src/store/: flowStore.ts  hmiStore.ts  optimizedFlowStore.ts
petra-designer/src/styles/: index.css  isa101-theme.css  performance.css  petra-theme.css
petra-designer/src/types/: hmi.ts  index.ts  nodes.ts
petra-designer/src/utils/: blockIcons.ts  (+5 more)
scripts/: add-license-headers.sh  analyze-features.sh  benchmark-config-validator.sh  benchmark-regression.sh  cleanup-project.sh  install.sh  monitor-health.sh  petra-dev.sh  pre-release-check.sh  quick-test.sh  run-benchmark-preset.sh  run-benchmarks-enhanced.sh  run-benchmarks.sh  run-benchmarks.sh.backup  test-benchmarks.sh  test-harness.sh  test.sh  validate-runtime.sh
src/: alarm_manager.rs  alarms.rs  block.rs  block_executor.rs  blocks.rs  build.rs  build_info.rs  config.rs  config_manager.rs  config_schema.rs  config_secure.rs  config_security.rs  email_block.rs  engine.rs  engine_enhanced.rs  engine_reload.rs  error.rs  features.rs  health.rs  history.rs  lib.rs  license.rs  limits.rs  main.rs  main_enhanced.rs  memory_pool.rs  metrics.rs  metrics_server.rs  modbus.rs  mqtt.rs  opcua.rs  realtime.rs  s7.rs  security.rs  signal.rs  signal_enhanced.rs  signal_optimized.rs  tags.rs  twilio.rs  twilio_block.rs  (+2 more)
src/blocks/: arithmetic.rs  base.rs  cache_optimized.rs  comparison.rs  control.rs  convert.rs  data.rs  edge.rs  email.rs  logic.rs  memory.rs  ml.rs  mod.rs  simd_math.rs  simulation.rs  statistics.rs  timer.rs  web.rs
src/connectors/: di.rs  di16.rs
src/control/: timer.rs
src/devices/: pump_controller.rs
src/engine/: parallel_executor.rs
src/features/: mod.rs
src/fixes/: add_must_use.rs
src/io/: console_output.rs  input_block.rs  mqtt.rs  mqtt_send.rs
src/mqtt/: cli.rs
src/plc/: device.rs  mod.rs  rack.rs
src/project/: project_config.rs
src/protocols/: mod.rs  modbus.rs  mqtt.rs  opcua.rs  s7.rs  zero_copy.rs
src/security/: cli.rs  mod.rs
src/src/: health.rs  status_api.rs
src/storage/: advanced.rs  cli.rs  clickhouse.rs  clickhouse_pool.rs  local.rs  manager.rs  manager_enhanced.rs  metrics.rs  mod.rs  remote.rs  wal.rs  wal_enhanced.rs
src/web/: handlers.rs  health.rs  mod.rs  static_files.rs  websocket.rs
tests/: features.rs  integration.rs  test_plan.md
tests/integration/: e2e_test.rs  engine_lifecycle_test.rs  resilience_test.rs  security_tests.rs
tests/property/: signal_bus_prop.rs
(+60 files in other folders)
